--- a/drivers/platform/xiaomi/Kconfig
+++ b/drivers/platform/xiaomi/Kconfig
@@ -20,4 +20,10 @@ config MACH_XIAOMI_TISSOT
 	help
 	  Support for Xiomi MI A1 tissot
 
+config MACH_XIAOMI_TIFFANY
+	bool "Tiffany board"
+	select MACH_XIAOMI_MSM8953
+	help
+		Support for Xiaomi MI 5X tiffany
+
 endmenu
